force-app/main/default/objects/Part_Costing__c/Part_Costing__c.object-meta.xml
<CustomObject>
    <label>Part Costing</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Part Costing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Costings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>