force-app/main/default/objects/Part_Costing__c/fields/Cost_Per_Kg_USD__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Kg_USD__c</fullName>
    <label>Cost Per Kg. (USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>