force-app/main/default/objects/Part_Costing__c/fields/Customs__c.field-meta.xml
<CustomField>
    <fullName>Customs__c</fullName>
    <label>Customs (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>