force-app/main/default/objects/Part_Costing__c/fields/Customs_USD__c.field-meta.xml
<CustomField>
    <fullName>Customs_USD__c</fullName>
    <label>Customs (USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>