force-app/main/default/objects/Part_Costing__c/fields/Eng_Cmp_2__c.field-meta.xml
<CustomField>
    <fullName>Eng_Cmp_2__c</fullName>
    <label>Eng Cmp 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>