force-app/main/default/objects/Part_Costing__c/fields/Eng_EC_2__c.field-meta.xml
<CustomField>
    <fullName>Eng_EC_2__c</fullName>
    <label>Eng EC 2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>