force-app/main/default/objects/Part_Costing__c/fields/Eng_Item_1__c.field-meta.xml
<CustomField>
    <fullName>Eng_Item_1__c</fullName>
    <label>Eng Item 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>