force-app/main/default/objects/Part_Costing__c/fields/Eng_Item_Qty_2__c.field-meta.xml
<CustomField>
    <fullName>Eng_Item_Qty_2__c</fullName>
    <label>Eng Item Qty 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>