force-app/main/default/objects/Part_Costing__c/fields/Eng_Item_UC_2__c.field-meta.xml
<CustomField>
    <fullName>Eng_Item_UC_2__c</fullName>
    <label>Eng Item UC 2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>