force-app/main/default/objects/Part_Costing__c/fields/Eng_Qty_1__c.field-meta.xml
<CustomField>
    <fullName>Eng_Qty_1__c</fullName>
    <label>Eng Qty 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>