force-app/main/default/objects/Part_Costing__c/fields/Eng_UC_1__c.field-meta.xml
<CustomField>
    <fullName>Eng_UC_1__c</fullName>
    <label>Eng UC 1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>