force-app/main/default/objects/Part_Costing__c/fields/Engineering_Total_USD__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Total_USD__c</fullName>
    <label>Engineering Total(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>