force-app/main/default/objects/Part_Costing__c/fields/Local_Freight_USD__c.field-meta.xml
<CustomField>
    <fullName>Local_Freight_USD__c</fullName>
    <label>Local Freight(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>