force-app/main/default/objects/Part_Costing__c/fields/Misc_Total__c.field-meta.xml
<CustomField>
    <fullName>Misc_Total__c</fullName>
    <label>Misc Total()</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>