force-app/main/default/objects/Part_Costing__c/fields/Process_Total_USD__c.field-meta.xml
<CustomField>
    <fullName>Process_Total_USD__c</fullName>
    <label>Process Total (USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>