force-app/main/default/objects/Part_Costing__c/fields/Quote_Express__c.field-meta.xml
<CustomField>
    <fullName>Quote_Express__c</fullName>
    <label>Quote Express</label>
    <referenceTo>Quote_Express__c</referenceTo>
    <relationshipLabel>Part Costings</relationshipLabel>
    <relationshipName>Part_Costings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>