force-app/main/default/objects/Part_Costing__c/fields/Sales_Cmp_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cmp_1__c</fullName>
    <label>Sales Cmp 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>