force-app/main/default/objects/Part_Costing__c/fields/Sales_Cmp_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cmp_2__c</fullName>
    <label>Sales Cmp 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>