force-app/main/default/objects/Part_Costing__c/fields/Sales_Markup_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Markup_2__c</fullName>
    <label>Sales Markup 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>