force-app/main/default/objects/Part_Costing__c/fields/Sales_Qty_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qty_1__c</fullName>
    <label>Sales Qty 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>