force-app/main/default/objects/Part_Costing__c/fields/Sub_Total_Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Cost_USD__c</fullName>
    <label>Sub Total Cost (USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>