force-app/main/default/objects/Part_Costing__c/fields/Total_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_USD__c</fullName>
    <label>Total Price(USD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>